fix labels wrapping

--- a/packages/styles/_sass/pm-styles/_pm-badges.scss
+++ b/packages/styles/_sass/pm-styles/_pm-badges.scss
@@ -20,6 +20,7 @@
     border-radius: 1rem;
 	padding: .1rem .2rem;
 	max-width: 15rem;
+	flex-wrap: nowrap;
   }
 }
 .pm-badgeLabel-link,
